# sac

./: .gitignore  CMakeLists.txt  README.md  config.toml
.github/workflows/: main.yml
benchmark/: config.toml  log.out  report.out  spec.out  stdout.out
benchmark/scripts/: plot_benchmark.py
include/: AnnealChain.h  FrequencyGrid.h  Kernel.h  Measure.h  MonteCarloSAC.h  Random.h  ReadInModule.h  SAC.h  annealing.h  annealing_chain.h  freq_grids.h  kernel.h  measure.h  qmc_data_reader.h  qmc_reader.h  random.h  sac.h  sac_annealing.h  sac_core.h  sac_initializer.h  sac_kernel.h  sac_measure.h  sac_writer.h
results/: benchmark.py  benchmark_a.txt  benchmark_g.txt  configs-alpha.txt  h-alpha.txt  output.txt  plot-spectrum.py  plot.py  script.py  test.txt
results/benchmark/: benchmark.py  benchmark_a.txt  benchmark_g.txt  out.out
results/configs/: config_A_14.5.txt  config_A_15.txt
results/data/: gt_l4_lt80_u-0.1_b4.0_k_pi2pi2.txt  gt_l4_lt80_u-4.0_b4.0_k_pi2pi2.txt  (+3 more)
run/: batch.sh  make.sh  run.sh  submit.slurm
script/: generate_data.py  plot_benchmark.py
src/: AnnealChain.cpp  DiagonalTools.hpp  FrequencyGrid.cpp  Kernel.cpp  Measure.cpp  MonteCarloSAC.cpp  Random.cpp  ReadInModule.cpp  SAC.cpp  annealing.cpp  annealing_chain.cpp  freq_grids.cpp  kernel.cpp  main.cpp  matrix_util.hpp  measure.cpp  measure.h  qmc_data_reader.cpp  qmc_reader.cpp  random.cpp  sac.cpp  sac.h  sac_annealing.cpp  sac_core.cpp  sac_initializer.cpp  sac_kernel.cpp  sac_main.cpp  sac_measure.cpp  sac_write.cpp  sac_writer.cpp  stochasticAC.cpp  stochasticAC.h  strings.h
(+5 files in other folders)
